20170416 增加了NA函数的翻译

--- a/翻译团队.md
+++ b/翻译团队.md
@@ -1,8 +1,13 @@
 因为是非盈利性质的全人工翻译，因此我们的翻译人员是非常辛苦的。如果你觉得我们的翻译不错的话，欢迎多多宣传和多多支持，加个鸡腿也是不错的。
 
 #### 团队成员贡献：
-雪山凌狐
-Poison
+**雪山凌狐：**
+NA
+
+**Poison：**
+
 
 ### 更新日志
+20170416 增加了NA函数的翻译
+
 20170411 首次编写写在最前，免责声明，版权声明，翻译团队文档内容，其中部分内容尚待更新
